# pyomovi

./: README.md  package-lock.json  package.json  pyproject.toml  pytest.ini
.github/workflows/: build.yml  publish.yml
examples/: introduction.ipynb
pyomovi/: __init__.py  _version.py  example.py  exceptions.py  visualizer.py
pyomovi/tests/: test_example.py
src/: widget.ts
